[package]
name = "advent"
version = "0.1.0"
authors = ["Hunter Kelly <hkelly@riotgames.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
md5 = "^0.7.0"
regex = "^1.5.4"
nom = "7.1.3"
itertools = "^0.10.1"
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "^1.0.64"
lazy_static = "^1.4.0"
num = "^0.4.0"
